1.0.3:
	- Fix setting dirtyness of library in "Rename from Key" (Jordy Potman)
	- Reduce window clutter (Kai Willadsen)
	- Italian translation (Michele Mattioni)
	- Improve translatability of code (Kai Willadsen)
	- Intltool fixes (Eric Lesh)
	- Fix(?) taglist corruption bug
	- Use poppler glib bindings (Kai Willadsen)
	- Start using ucompose.hpp for string composition
	- Compile against mt-only boost_regex (Damien Thébault)
	- Fix "All files" filter to be * instead of *.*
	- Support InProceedings crossref records
	- RPM spec file (Davyd Madeley)
	- Add texttrademark unicode->latex
	- Make configure fail properly when boost_regex is absent (Aiden Delaney)
	- Fix handling of escape key in dialogs

1.0.2:
	- Handle "Digital Object Identifier 10.1109..." (Jordy Potman)
	- Handle CDATA enclosure of titles (Jordy Potman)
	- Escape ampersands in bibtex export
	- Options for setting gnome proxy in Preferences
	- Fix thumbnail sizing bug
	- Special case for getting dois like "doi: blah/blah, more text" to 
		ignore trailing comma.
	- Add progress dialog when loading library
	- Improved keyboard behaviour in main window and in document properties
	- Fix 'remove' failing with duplicate keys
	- Add "Delete File from Drive"
	- Add "Rename File to Key"
	- Add/fix some accelerators
	- Fix ./configure failing on Ubuntu 6.06
	- Add option to enclose all values in {} when exporting bibtex
	- Fix crash opening files which no longer exist (Andreas Dalsgaard)
	- Fix saving broken to FS away from $HOME (Andreas Dalsgaard)

1.0.1:
	- Save and load relative filenames as well as absolute filenames
	- When opening library, clear bibdata in between docs (Rodrigo Kassick)
	- Make SaveLibrary insensitive when library not dirty
	- Switch to autotools (Eric Lesh)
	- Open properties on double click as last resort
	- Import stuff:
		- Fix getting type wrong for PhdThesis
		- Fix bibtex import getting confused about certain accents (Chris Putnam)